--- a/Frame/Layout/3_Content/Movie/movdes.html
+++ b/Frame/Layout/3_Content/Movie/movdes.html
@@ -2,18 +2,18 @@
     <div class="panel panel-default">
 <div class="ibwrapper hide-mobile">
     <section id="section1"> 
-        <a href="#section2" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">‹</a>
+        <a href="#section2"  class="arrow__btn">‹</a>
             <div class="item md-LN" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/little-nemo-adventures-in-slumberland-1989-full-movie-online-free/mob6r4v-0mx6oa8','popup','width=600,height=600'); return false;"></div>
             <div class="item md-MN" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/mr-nobody-2009-full-movie-online-free/nmae5o7-8nmmaew','popup','width=600,height=600'); return false;"></div>
             <div class="item md-VS" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/vanilla-sky-2001-full-movie-online-free/rdbl9go-qwr3o5wb','popup','width=600,height=600'); return false;"></div>
             <div class="item md-DOLL" onclick="window.open('https://ww3.yesmovies.show/watch-series-2/dollhouse-2009-all-seasons-online-free/7y534ov-b07y9jk0','popup','width=600,height=600'); return false;"></div> 
             <div class="item md-Nine" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/9-2009-full-movie-online-free/q67dqm5-wq66lj8?watching=1','popup','width=600,height=600'); return false;"></div>
-        <a href="#section2" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">›</a></section>
+        <a href="#section2" class="arrow__btn">›</a></section>
     <section id="section2"> 
-        <a href="#section1" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">‹</a>
+        <a href="#section1" class="arrow__btn">‹</a>
             <div class="item md-CHL" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/cool-hand-luke-1967-full-movie-online-free/a4yjq5a-68a9pmkw','popup','width=600,height=600'); return false;"></div>
             <div class="item md-PIF" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/pay-it-forward-2000-full-movie-online-free/rdblryk-qwrogdw','popup','width=600,height=600'); return false;"></div> 
             <div class="item md-INT" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/in-time-2011-full-movie-online-free/kq94mv6-0kq44m0','popup','width=600,height=600'); return false;"></div>
             <div class="item md-SOAW" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/scent-of-a-woman-1992-full-movie-online-free/vkvbdnb-4wv9x70','popup','width=600,height=600'); return false;"></div> 
             <div class="item md-GAG" onclick="window.open('https://ww3.yesmovies.show/watch-movie-2/gods-and-generals-2003-full-movie-online-free/ll977z3-98lgox0','popup','width=600,height=600'); return false;"></div> 
-        <a href="#section1" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">›</a></section></div></div></section>  
+        <a href="#section1" class="arrow__btn">›</a></section></div></div></section>  
