--- a/Frame/Layout/3_Content/Music/musicmob.html
+++ b/Frame/Layout/3_Content/Music/musicmob.html
@@ -1,7 +1,7 @@
 <section aria-label="MusicTop" class="panel-body">
     <div class="panel panel-default">
     <!--Terms Alert -->
-        <section aria-label="BookAlert" id="softwarealert">
+        <section aria-label="MusicAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true"></span><span class="sr-only">Close</span></button>
                     <p>Making Music is just as dangerous.</p><p>Support Pro-Whites Unafraid. #FREEBOND</p></div></section>
@@ -24,7 +24,7 @@
             <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                 <div class="panel">
                     <div class="panel-body">
-                        <h2>Woke Alone</h2>               
+                        <h2>&nbsp;</h2>               
                         <span class="img-responsive center-block musicm mm-BWA">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" target="popup" onclick="window.open('https://mega.nz/folder/bO5F3BAR#Y_XX4jG4piS5MjJVnUocqg' , 'popup','width=600,height=600'); return false;"><span>Album</span></a></div>  
@@ -32,7 +32,7 @@
             <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                 <div class="panel">
                     <div class="panel-body"> 
-                        <h2>Mein Kampf 1-2</h2>
+                        <h2>&nbsp;</h2>
                         <span class="img-responsive center-block musicm mm-BKM">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
@@ -40,19 +40,19 @@
             <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                 <div class="panel">
                     <div class="panel-body"> 
-                        <h2>Screw Optics</h2>
+                        <h2>&nbsp;</h2>
                         <span class="img-responsive center-block musicm mm-BSO">&nbsp;</span>
                         <div class="btn-1 center-block">
-                            <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a></div>
-                </div></div></section>    
+                            <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
             <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                 <div class="panel">
                     <div class="panel-body"> 
-                        <h2>Nazi Goes To Africa</h2>
+                        <h2>&nbsp;</h2>
                         <span class="img-responsive center-block musicm mm-BNGA">&nbsp;</span>
                         <div class="btn-1 center-block">
-                            <a class="btn-readmore button" href="https://mega.nz/folder/bbgjzD7C#MHzI92WEkbDYYsw_jkEJ3Q" target="_blank"><span>Album</span></a></div>
-                </div></div></section>  
+                            <a class="btn-readmore button" href="https://mega.nz/folder/bbgjzD7C#MHzI92WEkbDYYsw_jkEJ3Q" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
                     </div></section>
             </div></div></div>
 <!--Rock --> 
@@ -60,7 +60,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 id="Rock-M" class="panel-title tc">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#RWDSJam">Open RWDS (Rock)</a></h3></div></div>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#RWDSJam"> RWDS (Rock)</a></h3></div></div>
 <!--Open-->
         <div id="RWDSJam" class="panel-collapse collapsed">
             <div class="content panel-body">
@@ -73,7 +73,7 @@
                 <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Enema Caliphate</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block musicm mm-REOC">&nbsp;</span>
 
                             <div class="btn-1 center-block">
@@ -82,7 +82,7 @@
                 <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>Cloak and Burka</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block musicm mm-RCB">&nbsp;</span>
 
                             <div class="btn-1 center-block">
@@ -91,7 +91,7 @@
                 <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
                         <div class="panel-body">
-                            <h2>RWDSE</h2>
+                            <h2>&nbsp;</h2>
                             <span class="img-responsive center-block musicm mm-RWDS">&nbsp;</span>
 
                             <div class="btn-1 center-block">
@@ -105,7 +105,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 id="parody-M" class="panel-title tc">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#parodyjam">Open Morrakiu (Epic)</a></h3></div></div>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#parodyjam">Morrakiu</a></h3></div></div>
 <!--Open -->
         <div id="parodyjam" class="panel-collapse collapse">
             <div class="content panel-body">
@@ -131,7 +131,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 id="st-M" class="panel-title tc">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#soundtrackjam">TGBLNH (Soundtrack)</a></h3></div></div>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#soundtrackjam">OST</a></h3></div></div>
 <!--Title -->
         <div id="soundtrackjam" class="panel-collapse collapse">
             <div class="content panel-body">
@@ -140,14 +140,129 @@
                         <section class="comment-content"></section>
 <!--Contain -->
         <div class="container-fluid tc">
-<!--Soundtrack -->
-            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+<!--Mr.Bond -->
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                 <div class="panel">
                     <div class="panel-body">
-                        <h2>TGSNT</h2>
-                        <span class="img-responsive center-block musicm mm-GST">&nbsp;</span>
+                        <h2>&nbsp;</h2>               
+                        <span class="img-responsive center-block musicm ms-9ost">&nbsp;</span>
                         <div class="btn-1 center-block">
-                            <a class="btn-readmore button" href="https://mega.nz/folder/OHBS1BgJ#oLo_FcjtbciNx_k7Ld4_fg" target="_blank"><span>Album</span></a></div>
-                        </div></div></section>
-                    </div></section></div></div></div>
-                </div></section>
+                            <a class="btn-readmore button" target="popup" onclick="window.open('https://mega.nz/folder/bO5F3BAR#Y_XX4jG4piS5MjJVnUocqg' , 'popup','width=600,height=600'); return false;"><span>Album</span></a></div>  
+                </div></div></section>
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-continost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
+                </div></div></section>   
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-dexterost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-gladiatorost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/bbgjzD7C#MHzI92WEkbDYYsw_jkEJ3Q" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body">
+                        <h2>&nbsp;</h2>               
+                        <span class="img-responsive center-block musicm ms-Gandgost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" target="popup" onclick="window.open('https://mega.nz/folder/bO5F3BAR#Y_XX4jG4piS5MjJVnUocqg' , 'popup','width=600,height=600'); return false;"><span>Album</span></a></div>  
+                </div></div></section>
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-greatestost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
+                </div></div></section>   
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-inceptionost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-ontimeost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/bbgjzD7C#MHzI92WEkbDYYsw_jkEJ3Q" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body">
+                        <h2>&nbsp;</h2>               
+                        <span class="img-responsive center-block musicm ms-lawost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" target="popup" onclick="window.open('https://mega.nz/folder/bO5F3BAR#Y_XX4jG4piS5MjJVnUocqg' , 'popup','width=600,height=600'); return false;"><span>Album</span></a></div>  
+                </div></div></section>
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-nobodyost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
+                </div></div></section>   
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-powderost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-prisonost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/bbgjzD7C#MHzI92WEkbDYYsw_jkEJ3Q" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body">
+                        <h2>&nbsp;</h2>               
+                        <span class="img-responsive center-block musicm ms-skyost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" target="popup" onclick="window.open('https://mega.nz/folder/bO5F3BAR#Y_XX4jG4piS5MjJVnUocqg' , 'popup','width=600,height=600'); return false;"><span>Album</span></a></div>  
+                </div></div></section>
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-wentost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
+                </div></div></section>   
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm ms-zeldaost">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/folder/nSpnmTRI#pafuL3UJbitqlLnr1fX3UA" target="_blank"><span>Album</span></a>
+                        </div></div></div></section>  
+                    </div></section>
+            </div></div></div>
