--- a/Frame/Layout/3_Content/cBooks/bookdes.html
+++ b/Frame/Layout/3_Content/cBooks/bookdes.html
@@ -2,26 +2,26 @@
     <div class="panel panel-default">
 <div class="ibwrapper hide-mobile">
 	<section id="section1"> 
-		<a href="#section3" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">‹</a>
-			<div class="item bd-CBE" target="popup" onclick="window.open('../../Import/DL/Books/A_History_of_Central_Banking.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-COC" target="popup" onclick="window.open('../../Import/DL/Books/The_Culture_Critique.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-MK" target="popup" onclick="window.open('../../Import/DL/Books/Mein_Kampf_Dalton.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-CHR" target="popup" onclick="window.open('https://christogenea.org/CNT/contents','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-TIJ" target="popup" onclick="window.open('../../Import/DL/Books/HenryFord-International_Jew.pdf','popup','width=600,height=600'); return false;"></div> 
-		<a href="#section2" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">›</a></section>
+		<a href="#section3" class="arrow__btn">‹</a>
+			<div class="item bd-CBE" onclick="window.open('../../Import/DL/Books/A_History_of_Central_Banking.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-COC" onclick="window.open('../../Import/DL/Books/The_Culture_Critique.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-MK" onclick="window.open('../../Import/DL/Books/Mein_Kampf_Dalton.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-CHR" onclick="window.open('https://christogenea.org/CNT/contents','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-TIJ" onclick="window.open('../../Import/DL/Books/HenryFord-International_Jew.pdf','popup','width=600,height=600'); return false;"></div> 
+		<a href="#section2" class="arrow__btn">›</a></section>
     <section id="section2"> 
-	  	<a href="#section1" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">‹</a>
-			<div class="item bd-WP" target="popup" onclick="window.open('../../Import/DL/Books/White_Power_Rockwell.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-HS" target="popup" onclick="window.open('../../Import/DL/Books/Hellstorm-Thomas_Goodrich.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-TTD" target="popup" onclick="window.open('../../Import/DL/Books/Turner_Diaries.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-WWWM" target="popup" onclick="window.open('../../Import/DL/Books/Which_Way_Western_Man.pdf','popup','width=600,height=600'); return false;"></div>
-			<div class="item bd-TTTW" target="popup" onclick="window.open('../../Import/DL/Books/This_Time_The_World-Rockwell.pdf','popup','width=600,height=600'); return false;"></div>
-		<a href="#section3" onclick="keepLocation(window.pageYOffset);" class="arrow__btn ">›</a></section>
+	  	<a href="#section1" class="arrow__btn">‹</a>
+			<div class="item bd-WP" onclick="window.open('../../Import/DL/Books/White_Power_Rockwell.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-HS" onclick="window.open('../../Import/DL/Books/Hellstorm-Thomas_Goodrich.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-TTD" onclick="window.open('../../Import/DL/Books/Turner_Diaries.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-WWWM" onclick="window.open('../../Import/DL/Books/Which_Way_Western_Man.pdf','popup','width=600,height=600'); return false;"></div>
+			<div class="item bd-TTTW" onclick="window.open('../../Import/DL/Books/This_Time_The_World-Rockwell.pdf','popup','width=600,height=600'); return false;"></div>
+		<a href="#section3" class="arrow__btn ">›</a></section>
     <section id="section3"> 
-	  	<a href="#section2" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">‹</a>
-			<div class="item bd-ATR" target="popup" onclick="window.open('../../Import/DL/Books/Kaczynski_Anti-Tech_Rev_WH.pdf#toolbar=1&amp;navpanes=1&amp;scrollbar=0','popup','width=600,height=600'); return false;"></div> 
-			<div class="item bd-TJRS" target="popup" onclick="window.open('../../Import/DL/Books/Jones_Jew_Rev_Spirit.pdf','popup','width=600,height=600'); return false;"></div>    
-			<div class="item bd-JMS" target="popup" onclick="window.open('../../Import/DL/Books/Siege-James_Mason.pdf','popup','width=600,height=600'); return false;"></div>  
-			<div class="item bd-WBRW" target="popup" onclick="window.open('../../Import/DL/Books/Where-Black-Rules-White.pdf','popup','width=600,height=600'); return false;"></div>    
-			<div class="item bd-TWL" target="popup" onclick="window.open('../../Import/DL/Books/Mosley-Tomorrow_We_Live.pdf','popup','width=600,height=600'); return false;"></div> 
-		<a href="#section1" onclick="keepLocation(window.pageYOffset);" class="arrow__btn">›</a></section></div></div></section>
+	  	<a href="#section2" class="arrow__btn">‹</a>
+			<div class="item bd-ATR" onclick="window.open('../../Import/DL/Books/Kaczynski_Anti-Tech_Rev_WH.pdf#toolbar=1&amp;navpanes=1&amp;scrollbar=0','popup','width=600,height=600'); return false;"></div> 
+			<div class="item bd-TJRS" onclick="window.open('../../Import/DL/Books/Jones_Jew_Rev_Spirit.pdf','popup','width=600,height=600'); return false;"></div>    
+			<div class="item bd-JMS" onclick="window.open('../../Import/DL/Books/Siege-James_Mason.pdf','popup','width=600,height=600'); return false;"></div>  
+			<div class="item bd-WBRW" onclick="window.open('../../Import/DL/Books/Where-Black-Rules-White.pdf','popup','width=600,height=600'); return false;"></div>    
+			<div class="item bd-TWL" onclick="window.open('../../Import/DL/Books/Mosley-Tomorrow_We_Live.pdf','popup','width=600,height=600'); return false;"></div> 
+		<a href="#section1" class="arrow__btn">›</a></section></div></div></section>
