--- a/Frame/Layout/3_Content/BSupport/philliPro.html
+++ b/Frame/Layout/3_Content/BSupport/philliPro.html
@@ -23,9 +23,5 @@
                         </table></figcaption></figure>
 <!--Summary-->
                 <section aria-label="MHSumm" class="comment-content">
-                    <p>Matthew F. Hale, of East Peoria, I.L., was born July 27th 1971. Hale was the head of the explicitly racial World Church of the Creator in East Peoria, Illinois. He was stripped of his law license for his racial beliefs. The FBI would embed an informant into his organization and began trying to entrap him.</p> 
-
-                    <p>The informant attempted to get him on tape soliciting murder but each time Hale refused to go along. Eventually the government would do what the government does and simply lie claiming he did so anyways and played tapes of him using "racist language" and "making a joke" to convict him.</p>
-
-                    <p>Hale was sentenced to 40 years in ADX Florence USP - where he currently is serving his time at USP Marion, a medium-security institution in Illinois until his release in April 2, 2036 in which he would be 64 years old.</p>
+                    <p>Philip Hassler of Austria, was born Dec 28th 1986. Phillip whims stage name you may know him by Mr.Bond was arrested on January 20, 2021 for making music. Philip has been prosecuted and sentenced to 10 years for producing and spreading Nazi ideas and inciting hatred.</p> 
                 </section></section>
