--- a/Frame/CSS/ALL_Images.css
+++ b/Frame/CSS/ALL_Images.css
@@ -536,7 +536,10 @@
                 .mm-BWA {
                     background: url('./../../Images/Blog/zNatSoc/Music/Woke-Alone.png');
                 }
-                .mm-BKM {
+                .mm-BKM1 {
+                    background: url('./../../Images/Blog/zNatSoc/Music/Kampf-Mixtape1.png');
+                }
+                .mm-BKM2 {
                     background: url('./../../Images/Blog/zNatSoc/Music/Kampf-Mixtape2.png');
                 }
                 .mm-BNGA {
