--- a/Frame/Layout/3_Content/Music/musicmob.html
+++ b/Frame/Layout/3_Content/Music/musicmob.html
@@ -33,7 +33,15 @@
                 <div class="panel">
                     <div class="panel-body"> 
                         <h2>&nbsp;</h2>
-                        <span class="img-responsive center-block musicm mm-BKM">&nbsp;</span>
+                        <span class="img-responsive center-block musicm mm-BKM1">&nbsp;</span>
+                        <div class="btn-1 center-block">
+                            <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
+                </div></div></section>   
+            <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                <div class="panel">
+                    <div class="panel-body"> 
+                        <h2>&nbsp;</h2>
+                        <span class="img-responsive center-block musicm mm-BKM2">&nbsp;</span>
                         <div class="btn-1 center-block">
                             <a class="btn-readmore button" href="https://mega.nz/#F!POh1FRgY!fkPyYf2JEtngJXvEwa7Q-w" target="_blank"><span>Album</span></a></div>
                 </div></div></section>   
